2026/css/2026.css
@font-face {
  font-family: 'Jersey 25';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('../fonts/jersey25_regular.ttf') format('truetype');
}

@font-face {
  font-family: 'pomboverso';
  src:
    url('../fonts/pomboverso.woff2') format('woff2'),
    url('../fonts/pomboverso.ttf') format('truetype'),
    url('../fonts/pomboverso.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: block;
}

:root {
  --background: #2e2c42;
  --foreground: #ece3f6;
  --header: #6e6580;
  --project: #b7afd1;
  --accent: #b78ed7;
  --highlight: #e081d8;
  --outline: #fff;

  --background-2: #2c2336;
  --border: #6c489b;
  --placeholder-color: #a499b9;

  --space-between-blocks: 1rem;
  --space-between-inline: 0.25rem;

  --font-size-h1: 45px;
  --font-size-content: 18px;
}

*,
*::before,
*::after {
  box-sizing: border-box;
  font-family: inherit;
}

*:focus-visible {
  outline-color: var(--outline);
  outline-style: solid;
}

*:not(dialog) {
  margin: 0;
}

html,
body {
  padding: 0;
  margin: 0;
  background-color: var(--background);
  font-family: 'Jersey 25', Helvetica, Arial, sans-serif;
  font-weight: 400;
  color-scheme: dark;
  color: var(--foreground);
}

body {
  padding-block: 3rem;
  display: grid;
  grid-template-columns: 300px 1fr;
  max-width: 1000px;
  margin: auto;
}

header {
  border-right: 1px solid var(--border);
}

main {
}

h1 {
  font-size: var(--font-size-h1);
  font-weight: 400;
  color: var(--accent);
}

p {
  font-size: var(--font-size-content);
}

strong,
em {
  color: var(--highlight);
  font-style: normal;
  font-weight: 400;
}

ul {
  padding: 0;
  list-style: none;
}

img {
  max-width: 100%;
}

/* Blocks */
h1,
p,
blockquote,
li,
.searchbar,
img.preview,
.project-btn,
pv-search {
  margin-block-end: var(--space-between-blocks);
}

/* Rows */
.gallery,
.tags {
  display: flex;
  flex-direction: row;
  gap: var(--space-between-blocks);
  width: 100%;
  align-items: end;

  .separator {
    flex-grow: 1;
    flex-shrink: 1;
  }
}

.gallery {
  overflow-x: auto;
  justify-content: center;

  img {
    flex-basis: calc(100% / 3 - var(--space-between-blocks));
    max-width: calc(100% / 3 - var(--space-between-blocks));
  }
}

.tags {
  flex-wrap: wrap;
  justify-content: start;
}

.tag {
  border: 1px solid var(--accent);
  color: var(--accent);
  padding: 3px 10px;
  font-size: 13px;
  text-transform: uppercase;
  letter-spacing: 2px;
  background: transparent;

  &:hover {
    cursor: pointer;
  }
}

.cta {
  background: var(--accent);
  color: var(--background);
  border: 0;
  padding: 0.5rem 1rem;
  font-size: var(--font-size-content);
  text-decoration: none;
}

.icon {
  font-family: 'pomboverso' !important;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

pv-search {
  .searchbar {
    background-color: var(--background-2);
    border: 1px solid var(--border);
    display: flex;
    align-items: center;

    &:focus-within {
      outline: 1px solid var(--outline);
    }

    &::before {
      content: 'f';
      padding-inline: 1rem;
      font-family: 'pomboverso' !important;
      font-style: normal;
      font-weight: normal;
      font-variant: normal;
      text-transform: none;
      line-height: 1;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
      color: var(--placeholder-color);
    }

    input {
      background: transparent;
      border: 0;
      color: var(--foreground);
      flex-grow: 1;
      outline: transparent;
      flex-grow: 1;
      outline: transparent;
      padding: 1rem 1rem 1rem 0;
      font-size: var(--font-size-content);

      &:focus-visible {
        outline: 0 none transparent;
      }
    }

    input::placeholder {
      color: var(--placeholder-color);
      opacity: 1;
    }
  }
}

.container {
  padding: 0 var(--space-between-blocks);
  max-width: 850px;
  margin: 0 auto;
}

pv-list {
  button {
    &.header-btn,
    &.project-btn {
      background: transparent;
      border: 0;
      padding: 0;
      font-size: var(--font-size-content);
    }

    &.project-btn {
      color: var(--project);
    }

    &:hover {
      cursor: pointer;
    }
  }

  .header-btn {
    color: var(--header);

    &::before {
      content: '------------------------------------------------------------------';
    }
  }

  .content-area {
    background-color: var(--background-2);
    border: 1px solid var(--border);
    padding: var(--space-between-blocks);
    color: var(--placeholder-color);
    display: none;

    &:empty {
      display: none;
    }

    &.open {
      display: block;
    }
  }

  .collapse-indicator {
    &::before {
      content: '[';
    }
    &::after {
      content: ']';
    }
  }

  li.is-open .content-area {
    display: block;
  }
}

